<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_message" android:title="@string/menu_item_message" android:icon="@drawable/message" ></item>
    <item android:id="@+id/menu_mylike" android:title="@string/menu_item_mylike" android:icon="@drawable/menulike"></item>
    <item android:id="@+id/menu_option" android:title="@string/menu_item_option" android:icon="@drawable/menuoption" ></item>
    <item android:id="@+id/menu_source" android:title="@string/menu_item_source" android:icon="@drawable/source" ></item>
    <item android:id="@+id/menu_about" android:title="@string/menu_item_about" android:icon="@drawable/menuabout" ></item>
    <item android:id="@+id/menu_mind" android:title="@string/menu_item_mind" android:icon="@drawable/menustar" ></item>



</menu>